hs-bindgen/fixtures/iterator.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub type Toggle = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    pub fn makeToggle(start: bool) -> Toggle;
}
unsafe extern "C" {
    pub fn toggleNext(block: Toggle) -> bool;
}
unsafe extern "C" {
    pub fn releaseToggle(block: Toggle);
}
pub type Counter = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    pub fn makeCounter(
        start: ::std::os::raw::c_int,
        increment: ::std::os::raw::c_int,
    ) -> Counter;
}
unsafe extern "C" {
    pub fn counterNext(block: Counter) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn releaseCounter(block: Counter);
}
pub type VarCounter = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    pub fn makeVarCounter(start: ::std::os::raw::c_int) -> VarCounter;
}
unsafe extern "C" {
    pub fn varCounterNext(
        block: VarCounter,
        increment: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn releaseVarCounter(block: VarCounter);
}
